5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1667_2327.log
== TEST (2019-04-16 16:29:29) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == GINA):
	print(v2)
else:
	print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (b == GINA):
NameError: name 'GINA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:40) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA""):
	print(v2)
else:
	print (v)
-- ERROR:
File "XXXX", line 6
    if (b == "GINA""):
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:43) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA""):
	print(v2)
else:
	print (v)
-- ERROR:
File "XXXX", line 6
    if (b == "GINA""):
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:06) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA":
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.223682
-- ERROR:
  File "/home/codebench/codes/1667/2327/main.py", line 6
    if (b == "GINA":
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:08) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA":
	print(v2)
else:
	print (v)
-- ERROR:
File "XXXX", line 6
    if (b == "GINA":
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:16) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
0.00016037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:18) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.119577
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
0.00016037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
0.00016037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:19) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
0.00016037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:29) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.128994
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
0.00016037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
0.00016037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:31) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/23479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
0.00016037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:42) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.139346
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:58) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:59) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.179802
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:59) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:05) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.273059
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:15) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:45) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.226939
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:48) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:00) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:04) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.126929
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:08) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:19) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.131307
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:27) 
-- CODE:
b= input("nome do bruxo:", .lower())

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- ERROR:
File "XXXX", line 1
    b= input("nome do bruxo:", .lower())
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:48) 
-- CODE:
b= input.lower("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    b= input.lower("nome do bruxo:")
AttributeError: 'builtin_function_or_method' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:44) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.132574
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.6037309936539035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:45) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "GINA"):
	print(v2)
else:
	print (v)
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:53) 
-- CODE:
b= input("nome do bruxo:")

v= 3.7654/2.3479
v2= 3.674/2.789

if (b == "gina"):
	print(v2)
else:
	print (v)
-- EXECUTION TIME:
0.175257
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
